@@ -2,6 +2,11 @@
 VERSION 0.8.1cvs
 ================
 
+2006-11-08  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Imbue classic "C" locale for the output of message parts and
+   protocol commands (thanks to Mörtsell Anders).
+
 2006-10-11  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed 'vmime::platformDependant' to 'vmime::platform'. The old
